Fixes #29766 : Juno, default dashboards, 'Click to hide this in the future' nearly invisible

--- a/umbraco/presentation/umbraco_client/ui/default.css
+++ b/umbraco/presentation/umbraco_client/ui/default.css
@@ -571,6 +571,6 @@ guiEditor {
 .dashboardHideLink 
 {
     float: right;
-    color: #fff;
+    color: #aaa;
     text-decoration: none;
 }
